typescript/checker/tests/conformance/async/es5/awaitClassExpression_es5.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es5/awaitClassExpression_es5.ts
  --> $DIR/tests/conformance/async/es5/awaitClassExpression_es5.ts:7:1
   |
7  | / async function func(): Promise<void> {
8  | |     class D extends (await p) {
9  | |     }
10 | | }
   | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            150,
        ),
        hi: BytePos(
            165,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es5/awaitClassExpression_es5.ts:7:22
  |
7 | async function func(): Promise<void> {
  |                      ^^^^^^^^^^^^^^^

